[project]
name = "riceshine"
version = "1.0.0"
description = "fetch с центрированной информацией о системе"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psutil>=7.1.2",
    "pyinstaller>=6.16.0",
    "rich>=14.2.0",
    "toml>=0.10.2",
]

[tool.pyinstaller]
onefile = true
name = "riceshine"
hidden-imports = [
    "psutil",
    "rich",
    "toml",
    "rich.console",
    "rich.align",
    "rich.text",
    "rich.style",
    "psutil._psutil_linux"
]